# frAIburg

./: .gitignore  LICENSE  README.md
aadcUser/: README.md  stdafx.h
aadcUser/description/: customtypes.description  customtypes.h  nonpin_types.h
aadcUser/frAIburg_Basler/: CMakeLists.txt  basler_camera.cpp  basler_camera.h
aadcUser/frAIburg_CameraSnapshot/: CMakeLists.txt  camera_snapshot.cpp  camera_snapshot.h
aadcUser/frAIburg_DynamicCSVWriter/: CMakeLists.txt  README.md  dynamic_csv_writer_filter.cpp  dynamic_csv_writer_filter.h
aadcUser/frAIburg_DynamicEmergencyBreak/: CMakeLists.txt  README.md  dynamic_emergency_break.cpp  dynamic_emergency_break.h
aadcUser/frAIburg_GlobalMap/: CMakeLists.txt  map_filter.cpp  map_filter.h
aadcUser/frAIburg_KeyboardRemote/: CMakeLists.txt  README.md  displaywidget.cpp  displaywidget.h  keyboard_remote_filter.cpp  keyboard_remote_filter.h
aadcUser/frAIburg_LaneDetection/: CMakeLists.txt  lane_detection.cpp  lane_detection.h  lane_finder.cpp  lane_finder.h  line_points_detection.cpp  line_points_detection.h  subproblem.cpp  subproblem.h  test.txt
aadcUser/frAIburg_LightController/: CMakeLists.txt  light_controller.cpp  light_controller.h
aadcUser/frAIburg_MapVisualization/: CMakeLists.txt  map_display_scene_element.hpp  map_displaywidget.cpp  map_displaywidget.h  map_displaywidget_types.h  map_visualization_filter.cpp  map_visualization_filter.h  test_reference_map.cpp  test_reference_map.h
aadcUser/frAIburg_MarkerDetector/: CMakeLists.txt  README.md  aruco_helpers.h  cMarkerDetector.cpp  cMarkerDetector.h
aadcUser/frAIburg_MarkerPos/: CMakeLists.txt  cMarkerPos.cpp  cMarkerPos.h  stdafx.h
aadcUser/frAIburg_ObjectDetection/: CMakeLists.txt  bounding_box_visualization.cpp  bounding_box_visualization.h  object_detection.cpp  object_detection.h
aadcUser/frAIburg_ObstacleDetection/: CMakeLists.txt  obstacle_detection.cpp  obstacle_detection.h
aadcUser/frAIburg_ParkingSpaceDetection/: CMakeLists.txt  README.md  parking_space_detection.cpp  parking_space_detection.h
aadcUser/frAIburg_Planner/: CMakeLists.txt  GoalPointGenerator.cpp  GoalPointGenerator.h  ManeuverGoal.cpp  ManeuverGoal.h  ManeuverPlanner.cpp  ManeuverPlanner.h  PathPlanner.cpp  PathPlanner.h  PlannerFilter.cpp  PlannerFilter.h  SpeedPlanner.cpp  SpeedPlanner.h  Spline.cpp  Spline.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h  aadc_issues.txt
aadcUser/frAIburg_RealsenseCamera/: CMakeLists.txt  README.md  realsense_camera.cpp  realsense_camera.h  realsense_helper.h
aadcUser/frAIburg_RoadSignFilter/: CMakeLists.txt  roadsign_filter.cpp  roadsign_filter.h
aadcUser/frAIburg_StateMachine/: CMakeLists.txt  TodoMissing functionality.txt  event_struct.h  machine.h  state_machine.cpp  state_machine.h  state_machine_todos.txt
aadcUser/frAIburg_SteeringController/: CMakeLists.txt  README.md  SteeringAngle.xml  SteeringController.cpp  SteeringController.h
aadcUser/frAIburg_ThriftFacenet/: CMakeLists.txt  ExtIf.thrift  REAMDE.md  face_detection_struct.h  thrift_client.cpp  thrift_client.h
aadcUser/frAIburg_ThriftFacenet/gen-cpp/: ExtIf_constants.cpp  ExtIf_constants.h  ExtIf_types.cpp  ExtIf_types.h  ExtService.cpp  ExtService.h  ExtService_server.skeleton.cpp
aadcUser/frAIburg_ThriftFacenet/python/: facenet_interface.py  facenet_test_client_.py  server.py
aadcUser/frAIburg_ThriftFacenet/python/gen-py/ExtIf/: ExtService-remote  ExtService.py  __init__.py  ttypes.py
aadcUser/frAIburg_ThriftFacenet/python/thrift_web_app/: README.md  interface_facenet.py  newservice.thrift  newservicehandler.py  nginx.conf  server_tornado.py
aadcUser/frAIburg_ThriftFacenet/python/thrift_web_app/gen-py/newservice/: NewService-remote  NewService.py  ttypes.py
aadcUser/frAIburg_ThriftFacenet/python/thrift_web_app/static/: index.html
aadcUser/frAIburg_UltrasonicToMapFilter/: CMakeLists.txt  README.md  us_to_map_filter.cpp  us_to_map_filter.h
aadcUser/frAIburg_VirtualCrossingCreator/: CMakeLists.txt  crossing_creator.cpp  crossing_creator.h
aadcUser/frAIburg_WheelSpeedController/: CMakeLists.txt  cWheelSpeedController.cpp  cWheelSpeedController.h  stdafx.h
aadcUser/frAIburg_ZebraCrossingDetector/: CMakeLists.txt  zebra_crossing_detection.cpp  zebra_crossing_detection.h
aadcUser/lib_adtf_slim/: CMakeLists.txt  README.md  adtf_log_macros.h  adtf_tools.cpp  adtf_tools.h  opencv_tools.cpp  opencv_tools.h  slim_pins.cpp  slim_pins.h
aadcUser/lib_map/: CMakeLists.txt  README.md  global_map.cpp  global_map.hpp  map_element.cpp  map_element.hpp  map_element_types.cpp  map_element_types.h  map_event_listener.hpp  map_helper.cpp  map_helper.hpp  map_types.h
aadcUser/lib_tensorflow/: CMakeLists.txt  download_tf_model.sh  tensorflow_adtf_bridge.cpp  tensorflow_adtf_bridge.h  tensorflow_controller.cpp  tensorflow_controller.h  tensorflow_cpp_wrapper.cpp  tensorflow_cpp_wrapper.h  tensorflow_opencv_bridge.cpp  tensorflow_opencv_bridge.h
aadcUser/lib_utils/: CMakeLists.txt  README.md  camera_transformations.cpp  camera_transformations.h  circular_buffer.hpp  circular_buffer_ultrasonic.hpp  log_tools.cpp  log_tools.h  r200_transformations.cpp  r200_transformations.h  transformation_intel_rgb.h  xml_helper.hpp
adtf_config/frAIburgBaseConfig/: frAIburgBaseConfig.prj
adtf_config/frAIburgBaseConfig/config/: system.Common.runninglayout  system.config_layout  system.layout  (+1 more)
configuration/: basler_cropped_undistorted_for_markerpositioning.yml  frAIburg_configuration_dimensions.xml  frAIburg_configuration_dynamic_emergency_filter.xml  kalibr_basler_cropped_1280x400.yml  kalibr_basler_full_1280x960.yml  kalibr_rearcam_640x480_flipped_hv.yml
docs/: adtf_notes.md
installation_scripts/: download_fasterrcnn_model.sh  download_libtensorflow.sh  download_ssd_inception_model.sh  reinstall_nvidia_driver_384.sh  switchGCC4.8.sh  switchGCC5.sh
models/: README.md  rfcn_resnet101_9class_vanilla.config
models/labels/: audicup_label.txt  audicup_label_map.pbtxt
models/session_configs/: session_config_85percent_gpu_fraction.pb  session_config_allowgrowth_85percent_gpu_fraction.pb
(+21 files in other folders)
